--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,4 +1,5 @@
 .contactForm{
+    min-width: 300px;
     max-width: max-content;
     padding: 0.5rem ;
     display: flex;
@@ -15,3 +16,7 @@
     padding: 0.2rem;
      gap: 0.2rem;
 }
+
+
+
+
